--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: proyectodevopsort/orders-service
-          path: '/home/runner/work/obligatorioDevOps-infra/MS'
+          path: '/MS'
 
       - name: Build Order Service
         working-directory: /home/runner/work/obligatorioDevOps-infra/MS
