--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,15 +44,23 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Infra
+        uses: actions/checkout@v3
+
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
           java-version: '8'
           distribution: 'adopt'
+
+      - name: Checkout MicroServices
+        uses: actions/checkout@v3
+        with:
+          repository: proyectodevopsort/orders-service
+          path: 'MS'
   
       - name: Test Order Service
-        working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS
+        working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS/
         run: mvn -B test --file pom.xml
 
 # SONARCLOUD JOB # 
@@ -66,27 +74,37 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
+      - name: Checkout MicroServices
+        uses: actions/checkout@v3
+        with:
+          repository: proyectodevopsort/orders-service
+          path: 'MS'
+
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS/orders-service-example
+        working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=proyectodevopsort_obligatorioDevOps
         
 #GCP Artifact Registry #
@@ -106,6 +124,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Checkout MicroServices
+        uses: actions/checkout@v3
+        with:
+          repository: proyectodevopsort/orders-service
+          path: 'MS'
+
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0.6.0'
@@ -123,7 +147,7 @@ jobs:
 
       - name: 'Docker build'
         run:
-          docker build --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS/orders-service-example
+          docker build --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS
       
       - name: 'Docker push'
         run: docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
