--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -75,11 +75,6 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -88,11 +83,16 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Checkout MicroServices
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
           repository: proyectodevopsort/orders-service
           path: 'MS'
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
