--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -92,7 +92,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-          
+
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -103,7 +103,7 @@ jobs:
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: 73550b305b42a4de8a7794be189322220d1f8745
         working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=proyectodevopsort_obligatorioDevOps
         
