--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,8 @@
 name: MicroServices Actions
 
 on:
-  repository_dispatch:
-    types:
-      - webhook
-      
+  push:
+
 jobs:
   
 # BUILD JOBS #
@@ -105,7 +103,7 @@ jobs:
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: /home/runner/work/obligatorioDevOps-infra/obligatorioDevOps-infra/MS
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=proyectodevopsort_orders-service
         
