fix nombre secret

--- a/.github/workflows/test-Reusable-Workflow.yml
+++ b/.github/workflows/test-Reusable-Workflow.yml
@@ -10,8 +10,9 @@ on:
         required: true
         type: string
     secrets:
-      sonar-token:
+      SONAR_TOKEN:
         required: true
+
 
 jobs:
 
