--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -100,4 +100,43 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ inputs.sonar-project-key }}
-        
+
+#GCP Artifact Registry #
+
+  gcp_artifact:
+    name: GCP Artifact Registry - ${{ inputs.service-name }}
+    runs-on: ubuntu-latest
+    needs: [test, sonarcloud]
+    env:
+      PROJECT_ID: 'proyectodevopsort'
+      GAR_LOCATION: 'southamerica-east1'
+      REPOSITORY: 'proyecto-devops-ort'
+      IMAGE: '${{ inputs.service-name }}-microservice'
+      
+    steps:
+      
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v0.6.0'
+        with:
+          service_account: 'artifact-admin@proyectodevopsort.iam.gserviceaccount.com'
+          credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT }}'
+          token_format: 'access_token'
+
+      - uses: 'docker/login-action@v1'
+        name: 'Docker login'
+        with:
+          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+
+      - name: 'Docker build'
+        run:
+          docker build --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" /home/runner/work/
+      
+      - name: 'Docker push'
+        run: docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
+     
