--- a/k8s/kustomization.yml
+++ b/k8s/kustomization.yml
@@ -1,4 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./deploys/kustomization.yml
+  - ./deploys/deploy-orders.yml
+  - ./deploys/deploy-payments.yml
+  - ./deploys/deploy-shipping.yml
+  - ./deploys/deploy-products.yml
