--- a/k8s/kustomization.yml
+++ b/k8s/kustomization.yml
@@ -1,7 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+
+# Deploys List
   - ./deploys/deploy-orders.yml
   - ./deploys/deploy-payments.yml
   - ./deploys/deploy-shipping.yml
   - ./deploys/deploy-products.yml
+  
+# Services List
+  - ./services/service-orders.yml
+  - ./services/service-payments.yml
+  - ./services/service-shipping.yml
+  - ./services/service-products.yml
