--- a/k8s/nginx/deployment/nginx-ingress.yaml
+++ b/k8s/nginx/deployment/nginx-ingress.yaml
@@ -62,7 +62,7 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         args:
-          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
+         # -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
           - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -enable-cert-manager
          #- -enable-external-dns
