--- a/k8s/services/service-products.yml
+++ b/k8s/services/service-products.yml
@@ -4,7 +4,7 @@ metadata:
   name: products-service
 spec:
   selector:
-    app.kubernetes.io/name: products
+    app: products
   ports:
     - protocol: TCP
       port: 80
