--- a/k8s/services/service-shipping.yml
+++ b/k8s/services/service-shipping.yml
@@ -4,7 +4,7 @@ metadata:
   name: shipping-service
 spec:
   selector:
-    app.kubernetes.io/name: shipping
+    app: shipping
   ports:
     - protocol: TCP
       port: 80
