--- a/k8s/ingresses/ingress-payments.yml
+++ b/k8s/ingresses/ingress-payments.yml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: payments-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
   - host: payments.proyectodevops.local
