--- a/k8s/kustomization.yml
+++ b/k8s/kustomization.yml
@@ -14,22 +14,6 @@ resources:
   - ./services/service-shipping.yml
   - ./services/service-products.yml
 
-# NGINX
-  - ./nginx/common/ns-and-sa.yaml
-  - ./nginx/rbac/rbac.yaml
-  - ./nginx/common/default-server-secret.yaml
-  - ./nginx/common/ingress-class.yaml
-  - ./nginx/common/crds/k8s.nginx.org_virtualservers.yaml
-  - ./nginx/common/crds/k8s.nginx.org_virtualserverroutes.yaml
-  - ./nginx/common/crds/k8s.nginx.org_transportservers.yaml
-  - ./nginx/common/crds/k8s.nginx.org_policies.yaml
-  - ./nginx/deployment/nginx-ingress.yaml
-  - ./nginx/service/nodeport.yaml
-# - ./nginx/service/loadbalancer.yaml esto para GCP.. ver despues
+# Ingresses List
 
-# Ingres
-  - ./ingresses/ingress-orders.yml
-  - ./ingresses/ingress-payments.yml
-  - ./ingresses/ingress-products.yml
-  - ./ingresses/ingress-shipping.yml
 
