--- a/k8s/deploys/deploy-orders.yml
+++ b/k8s/deploys/deploy-orders.yml
@@ -17,11 +17,11 @@ spec:
           image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/orders-microservice:4742738fef9a2cdd306f72f01d66f42fe8b1300a
           env:
             - name: paymentsUrl
-              value: payments-service
+              value: http://35.247.197.104:80
             - name: shippingUrl
-              value: shipping-service
+              value: http://35.199.106.194:80
             - name: productsUrl
-              value: products-service
+              value: http://35.1999.106.194:80
           ports:
             - containerPort: 8080
   selector:
