cambio a latest tag

--- a/k8s/deploys/deploy-payments.yml
+++ b/k8s/deploys/deploy-payments.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: payments
-          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/payments-microservice:0138c2d21635a5037e17c9abbd73990792af5d72
+          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/payments-microservice:latest
           ports:
             - containerPort: 8080
   selector:
