--- a/k8s/deploys/deploy-products.yml
+++ b/k8s/deploys/deploy-products.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: products
-          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/products-microservice:49c58a01d4a96b58d5381da1ffe7a6e39a6f0a44
+          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/products-microservice:latest
           ports:
             - containerPort: 8080
   selector:
