--- a/k8s/argo/application.yml
+++ b/k8s/argo/application.yml
@@ -5,6 +5,12 @@ kind: Application
 metadata: 
   name: devops-argo-application
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: vfarcic/devops-toolkit
+    argocd-image-updater.argoproj.io/write-back-metod: git:secret:argocd/git-creds
+    argocd-image-updater.argoproj.io/git-branch: main
 spec:
   project: default
   source:
