--- a/k8s/argo/application.yml
+++ b/k8s/argo/application.yml
@@ -8,9 +8,13 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd-image-updater.argoproj.io/image-list: vfarcic/devops-toolkit
+    argocd-image-updater.argoproj.io/image-list:
+      - southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/orders-microservice
+      - southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/products-microservice
+      - southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/shipping-microservice
+      - southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/paymnets-microservice
     argocd-image-updater.argoproj.io/write-back-metod: git:secret:argocd/git-creds
-    argocd-image-updater.argoproj.io/git-branch: main
+    argocd-image-updater.argoproj.io/git-branch: develop
 spec:
   project: default
   source:
