--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -76,7 +76,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ inputs.sonar-project-key }}
 
-#GCP Artifact Registry #
+# GCP Artifact Registry #
 
   gcp_artifact:
     name: GCP Artifact Registry - ${{ inputs.service-name }}
@@ -112,12 +112,27 @@ jobs:
         run:
           docker build --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" ${{ github.workspace }}
       
-      - name: 'Docker build latest'
-        run:
-          docker build --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest" ${{ github.workspace }}
-      
       - name: 'Docker push'
         run: docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
      
-      - name: 'Docker push latest'
-        run: docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:latest"
+# Update Infra Repo #
+
+  update_image_tags:
+
+    name: GCP Artifact Registry - ${{ inputs.service-name }}
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          repository: DevOpsORT-proyecto/obligatorioDevOps-infra
+        run: |
+          sed '17s/.*/          $GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          git add .
+          git commit -m "automatic image tag update"
+          git push origin develop
+
+          
