--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -129,6 +129,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: DevOpsORT-proyecto/obligatorioDevOps-infra
+
+      - name: 'Update Tag and Commit'
         run: |
           sed '17s/.*/          $GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
           git add .
