--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: 'Update Tag and Commit'
         run: |
-          sed '17s/.*/          $GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          sed '17s/.*/          ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.GITHUB_SHA }}$/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
           git add .
           git commit -m "automatic image tag update"
           git push origin develop
