--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -132,7 +132,8 @@ jobs:
 
       - name: 'Update Tag and Commit'
         run: |
-          sed -i '17s/.*/          ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.GITHUB_SHA }}$/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          echo "NEW_IMAGE_NAME=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.GITHUB_SHA }}" >> $GITHUB_ENV
+          sed -i '17s/.*/       ${{ env.NEW_IMAGE_NAME }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
           git add .
           git commit -m "automatic image tag update"
           git push origin develop
