--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -126,15 +126,18 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: DevOpsORT-proyecto/obligatorioDevOps-infra
 
       - name: 'Update Tag and Commit'
         run: |
-          git config --global user.name "enzo.cesco@gmail.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+
           echo "NEW_IMAGE_NAME=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.GITHUB_SHA }}" >> $GITHUB_ENV
           sed -i '17s/.*/       ${{ env.NEW_IMAGE_NAME }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          
           git add .
           git commit -m "automatic image tag update"
           git push origin develop
