--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -135,8 +135,8 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
 
-          echo "NEW_IMAGE_NAME=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA >> $GITHUB_ENV
-          sed -i '17s/.*/       ${{ env.NEW_IMAGE_NAME }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          echo "NEW_IMAGE_NAME= >> $GITHUB_ENV
+          sed -i '17s/.*/       ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:$GITHUB_SHA/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
           
           git add .
           git commit -m "automatic image tag update"
