--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -14,7 +14,7 @@ on:
         required: true
       GCP_SERVICE_ACCOUNT:
         required: true
-        
+
 env:
   PROJECT_ID: 'proyectodevopsort'
   GAR_LOCATION: 'southamerica-east1'
@@ -136,7 +136,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
 
-          sed -i '17s/.*/       ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:$GITHUB_SHA/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+          sed -i '17s/.*/       ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ GITHUB_SHA }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
           
           git add .
           git commit -m "automatic image tag update"
