prueba update tags

--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -135,11 +135,10 @@ jobs:
 
       - name: 'Update Tag and Commit'
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
 
           sed -i 's/${{ inputs.service-name }}-microservice:.*/orders-microservice:${{ github.sha }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
 
+          git config user.email enzo.cesco@github.com
           git add .
           git commit -m "automatic image tag update"
           git push https://${{ secrets.ACCESS_TOKEN }}@github.com/DevOpsORT-proyecto/obligatorioDevOps-infra.git develop
