--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -135,8 +135,8 @@ jobs:
 
       - name: 'Update Tag and Commit'
         run: |
-          git config user.name ECesco
-          git config user.email enzo.cesco@gmail.com
+          git config --global user.name ECesco
+          git config --global user.email enzo.cesco@gmail.com
 
           sed -i 's/${{ inputs.service-name }}-microservice:.*/orders-microservice:${{ github.sha }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
 
