--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -133,17 +133,17 @@ jobs:
         with:
           repository: DevOpsORT-proyecto/obligatorioDevOps-infra
 
-      - name: 'Update Tag and Commit'
+      - name: 'Update TAG in Deploy File'
         run: |
-          git config --global user.name ECesco
-          git config --global user.email enzo.cesco@gmail.com
-          
-          eval `ssh-agent`
-          echo ${{ secrets.ACCESS_TOKEN }} > key.ssh
-          ssh-add key.ssh
-          
           sed -i 's/${{ inputs.service-name }}-microservice:.*/orders-microservice:${{ github.sha }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
 
+      - name: 'Start SSH'
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.ACCESS_TOKEN }}
+
+      - name: 'Push Change to Repo'
+        run: |
           git add .
           git commit -m "automatic image tag update"
           git push git@github.com:DevOpsORT-proyecto/obligatorioDevOps-infra.git develop
