prueba fix update automatico

--- a/k8s/deploys/deploy-payments.yml
+++ b/k8s/deploys/deploy-payments.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: payments
-          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/payments-microservice:latest
+          image: southamerica-east1-docker.pkg.dev/proyectodevopsort/proyecto-devops-ort/payments-microservice:30aec61db5c9c73c6a26b2d768803d9bc0ce6152
           ports:
             - containerPort: 8080
   selector:
