--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -81,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn org.sonarsource.scanner.maven:sonar -Pcoverage -Dsonar.projectKey=${{ inputs.sonar-project-key }}
+        run: mvn sonar:sonar -Pcoverage -Dsonar.projectKey=${{ inputs.sonar-project-key }}
 
       - name: Build and analyze
         env:
