--- a/.github/workflows/Java-Workflow.yml
+++ b/.github/workflows/Java-Workflow.yml
@@ -83,17 +83,11 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn test
 
-      - name: Analyze Coverage 
+      - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Pcoverage -Dsonar.projectKey=${{ inputs.sonar-project-key }}
-
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ inputs.sonar-project-key }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pcoverage -Dsonar.projectKey=${{ inputs.sonar-project-key }}
 
 
 
@@ -103,8 +97,8 @@ jobs:
     name: GCP Artifact Registry - ${{ inputs.service-name }}
     runs-on: ubuntu-latest
     needs: [sonarcloud]
+    if: " github.ref_name == 'main' || github.ref_name == 'uat' || github.ref_name == 'test' || github.ref_name == 'develop'"
 
-      
     steps:
       
       - name: Checkout
@@ -148,19 +142,23 @@ jobs:
         with:
           repository: DevOpsORT-proyecto/obligatorioDevOps-infra
 
-      - name: 'Update TAG in Deploy File'
-        run: |
-          sed -i 's/${{ inputs.service-name }}-microservice:.*/${{ inputs.service-name }}-microservice:${{ github.sha }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
-
       - name: 'Start SSH'
         uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.ACCESS_TOKEN }}
 
-      - name: 'Push Change to Repo'
+      - name: 'Setup Git'
         run: |
           git config --global user.email "enzo.cesco@gmail.com"
           git config --global user.name "ECesco"
+          git checkout ${{ github.ref_name }}
+
+      - name: 'Update TAG in Deploy File'
+        run: |
+          sed -i 's/${{ inputs.service-name }}-microservice:.*/${{ inputs.service-name }}-microservice:${{ github.sha }}/' k8s/deploys/deploy-${{ inputs.service-name }}.yml
+
+      - name: 'Push Change to Repo'
+        run: |
           git add .
           git commit -m "automatic image tag update"
-          git push git@github.com:DevOpsORT-proyecto/obligatorioDevOps-infra.git develop
+          git push git@github.com:DevOpsORT-proyecto/obligatorioDevOps-infra.git ${{ github.ref_name }}
